pegasus/src/Pegasus/Compiler/tests/invalidMOF/badQualifierDecl1.mof
/* Invalid qualifier flavor keyword */
Qualifier Abstract : boolean = false, 
    Scope(class, association, indication), 
    Flavor(EnableOverride, Restricted, badFlavorKeyword);
